# ProgettoMonopoly_Cpp

./: CMakeLists.txt  README.md  README.txt  log_computer.txt  log_human.txt
include/: board.h  exchangeMoney.h  fourPlayers.h  game.h  humanPlayer.h  player.h  playersOrder.h  robotPlayer.h  square.h
src/: board.cpp  exchangeMoney.cpp  game.cpp  humanPlayer.cpp  main.cpp  player.cpp  robotPlayer.cpp  square.cpp  temp.txt
